<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:background="#F1EFEF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat2"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/EDT_kyc_personType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/kyc_person_type"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/white" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/EDT_kyc_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/kyc_name"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/white" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/EDT_kyc_Details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/kyc_detail"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/white" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/EDT_kyc_Number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/kyc_number"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/white" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/EDT_kyc_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/kyc_file"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/white" />


            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <RadioButton
                    android:id="@+id/passport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Passport"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/adharcard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Adhar Card"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/voterId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Voter's Identity Card"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/drivinglic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Driving Licence"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/pancard"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="PAN Card"
                    android:textSize="18sp" />
            </RadioGroup>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/takeimage"
                android:layout_width="202dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="18dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="Take Image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
        </android.support.v7.widget.LinearLayoutCompat>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="266dp"
            android:layout_height="167dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2"
            app:srcCompat="@mipmap/ic_launcher" />

    </android.support.constraint.ConstraintLayout>










</LinearLayout>