<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/Desbord"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.activity.Dashboard"
    android:orientation="vertical">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTextHint"
        android:elevation="16dp"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/profile"
            android:layout_width="92dp"
            android:layout_height="86dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"

            android:background="@drawable/circular_textview_drawable"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.258">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.021"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.0" />


        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/Logout"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="#F1E4F1"
            android:text="@string/Logout"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toEndOf="@+id/profile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.076" />

        <ImageButton
            android:id="@+id/syncData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="@+id/Logout"
            app:layout_constraintEnd_toStartOf="@+id/Logout"
            app:layout_constraintHorizontal_bias="0.959"
            app:layout_constraintStart_toEndOf="@+id/profile"
            app:layout_constraintTop_toTopOf="@+id/Logout"
            app:layout_constraintVertical_bias="0.285"
            app:srcCompat="@android:drawable/stat_notify_sync" />


    </android.support.constraint.ConstraintLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/changpwd"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#00FF00"
            android:textColor="#FFFFFF"
            android:elevation="16dp"
            android:text="@string/Changpassword"
            android:textStyle="italic"

            android:layout_margin="24dp"  />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/Btn_benificials"
            android:layout_width="match_parent"
            android:layout_height="100dp"

            android:background="#00BFFF"
            android:elevation="16dp"
            android:textColor="#FFFFFF"
            android:text="@string/Banificials"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/Btn_Activity"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/Btn_Activity"
            tools:layout_editor_absoluteY="236dp"
            android:layout_margin="24dp"  />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/Btn_Activity"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textColor="#FFFFFF"
            android:background="#FF69B4"
            android:elevation="16dp"
            android:text="ACtivity"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/Btn_benificials"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            android:layout_margin="24dp" />
 </LinearLayout>


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="500dp"
        android:layout_height="match_parent" />












</LinearLayout>